# gobetween

./: Cargo.toml  README.md  dumpsources.lua  example.yaml  sources.txt
src/: config.rs  device.rs  faderport.rs  main.rs  mapping.rs  message.rs  message_template.rs  spec.rs  transformer.rs  utils.rs
src/faderport/: button.rs  encoder.rs  fader.rs  message.rs  mod.rs
src/midi/: device.rs  message_template.rs  mod.rs  spec.rs
src/sq/: id.rs  message.rs  mod.rs
src/sq/message/: id.rs  mod.rs
