[package]
name = "gobetween"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3", features = ["derive"]}
midir = "0.9"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
bytes = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
midi-msg = "0.4" # Also consider midly
